Add feedback link to footer
Add a link to the footer which directs to a Webropol survery for
collecting feedback on A+ (on UI-texts, bugs, improvement suggestions,
etc.)

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -3310,6 +3310,10 @@ msgid "SUPPORT"
 msgstr "Tuki"
 
 #: templates/base.html
+msgid "FEEDBACK"
+msgstr "Palaute"
+
+#: templates/base.html
 msgid "LOADING_FAILED"
 msgstr "Lataus epäonnistui!"
 
