--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -3305,6 +3305,10 @@ msgid "SUPPORT"
 msgstr "Support"
 
 #: templates/base.html
+msgid "FEEDBACK"
+msgstr "Feedback"
+
+#: templates/base.html
 msgid "LOADING_FAILED"
 msgstr "Loading failed!"
 
