Add feedback link to footer
Add a link to the footer which directs to a Webropol survery for
collecting feedback on A+ (on UI-texts, bugs, improvement suggestions,
etc.)

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -3309,6 +3309,10 @@ msgid "SUPPORT"
 msgstr "Support"
 
 #: templates/base.html
+msgid "FEEDBACK"
+msgstr "Feedback"
+
+#: templates/base.html
 msgid "LOADING_FAILED"
 msgstr "Loading failed!"
 
