--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -3314,6 +3314,10 @@ msgid "SUPPORT"
 msgstr "Tuki"
 
 #: templates/base.html
+msgid "FEEDBACK"
+msgstr "Palaute"
+
+#: templates/base.html
 msgid "LOADING_FAILED"
 msgstr "Lataus epäonnistui!"
 
