--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-31 16:43+0300\n"
+"POT-Creation-Date: 2021-09-06 11:46+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -788,6 +788,12 @@ msgstr "Failed to save changes."
 #, python-brace-format
 msgid "ENROLLMENTS_FAILED_WARNING_USERS_ALREADY_ENROLLED -- {users}"
 msgstr "The following users were already enrolled: {users}"
+
+#: course/staff_views.py
+msgid "ENROLLMENTS_FAILED_WARNING_COURSE_STAFF -- {users}"
+msgstr ""
+"The following users are course staff and cannot be enrolled as "
+"students: {users}"
 
 #: course/templates/course/_course_cards.html
 msgid "HIDDEN_FROM_STUDENTS"
