Fix one spelling mistake in a translated message

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-06 15:23+0300\n"
+"POT-Creation-Date: 2021-09-07 15:31+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -2976,8 +2976,8 @@ msgstr "Total number of submitters"
 msgid "EXERCISE_ERROR_COMMUNICATION"
 msgstr ""
 "There was a problem loading the assignment. Try loading the page again "
-"later. The course staff has been notifed. If the problem persists for over a "
-"day and hasn't been addressed on the course news, please contact course "
+"later. The course staff has been notified. If the problem persists for over "
+"a day and hasn't been addressed on the course news, please contact course "
 "staff."
 
 #: exercise/templates/exercise/_exercise_wait.html
