--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-07 17:30+0300\n"
+"POT-Creation-Date: 2021-09-13 16:29+0300\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -997,10 +997,13 @@ msgid "LATEST_COURSE_INSTANCE_CAN_BE_FOUND"
 msgstr "Kurssin viimeisimmän version löydät täältä:"
 
 #: course/templates/course/course_base.html
-msgid "LANGUAGE_WARNING_BROWSING_IN_DIFFERENT_LANGUAGE_THAN_IN_PREFERENCES"
+#, python-format
+msgid ""
+"LANGUAGE_WARNING_BROWSING_IN_DIFFERENT_LANGUAGE_THAN_IN_PREFERENCES -- "
+"%(display_lang)s, %(pref_lang)s"
 msgstr ""
-"Katselet kurssia eri kielellä kuin minkä olet asettanut ensisijaiseksi "
-"kieleksesi asetuksissasi."
+"Katselet kurssia eri kielellä (%(display_lang)s) kuin minkä olet asettanut "
+"ensisijaiseksi kieleksesi asetuksissasi (%(pref_lang)s)."
 
 #: course/templates/course/course_base.html
 #, python-format
