Fix a crash in the course participants page for unenrolled users
The participant details page may be opened for users that are not
enrolled in the course. The code `enrollment.status` used to crash
when `enrollment` is `None`.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-13 16:29+0300\n"
+"POT-Creation-Date: 2021-09-14 16:14+0300\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -2840,10 +2840,18 @@ msgid "ERROR_FAILED_TO_LOAD_RESOURCE"
 msgstr "Failed to load the resource."
 
 #: exercise/staff_views.py
+msgid "USER_NOT_ENROLLED"
+msgstr "This person is not enrolled in the course."
+
+#: exercise/staff_views.py
 #, python-brace-format
 msgid "NO_LONGER_PARTICIPATING_IN_COURSE -- {status}"
 msgstr ""
 "This student is no longer participating in the course (status: {status})."
+
+#: exercise/staff_views.py
+msgid "USER_IS_COURSE_STAFF"
+msgstr "This person is a member of the course staff."
 
 #: exercise/staff_views.py
 #, python-brace-format
